--- a/packages/hintorium/src/style.css
+++ b/packages/hintorium/src/style.css
@@ -6,6 +6,7 @@
   --hint-tooltip-radius: 6px;
   --hint-tooltip-padding-vertical: 8px;
   --hint-tooltip-padding-horizontal: 12px;
+  --hint-tooltip-padding-top: 14px;
   --hint-tooltip-max-width: calc(
     300px - 2 * var(--hint-tooltip-padding-horizontal)
   );
@@ -24,8 +25,6 @@
   z-index: var(--hint-tooltip-z-index);
   max-width: var(--hint-tooltip-max-width);
   width: max-content;
-  padding: var(--hint-tooltip-padding-vertical)
-    var(--hint-tooltip-padding-horizontal);
 
   font-family: var(--hint-tooltip-font-family);
   font-size: var(--hint-tooltip-font-size);
@@ -40,6 +39,22 @@
   opacity: 0;
   pointer-events: none;
   transition: var(--hint-tooltip-transition);
+  & > * {
+    margin: 0;
+  }
+}
+
+.hintorium-tooltip-inner.hintorium-tooltip-tour {
+  padding-top: var(--hint-tooltip-padding-top);
+}
+
+.hintorium-tooltip-inner {
+  position: relative;
+  border-radius: inherit;
+  overflow: hidden;
+  padding: var(--hint-tooltip-padding-vertical)
+    var(--hint-tooltip-padding-horizontal);
+
   & > * {
     margin: 0;
   }
@@ -110,6 +125,8 @@
 .hintorium-tooltip.light {
   --tooltip-bg: #fff;
   --tooltip-color: #333;
+  --tooltip-progress-bg: #edf2f7;
+  --tooltip-progress-fill: #d5dade;
   --tooltip-border: 1px solid #e1e5e9;
   --tooltip-shadow: 0 2px 12px rgba(0, 0, 0, 0.1);
   --hint-tooltip-loading-color: rgba(0, 0, 0, 0.55);
@@ -135,6 +152,8 @@
 
 .hintorium-tooltip.dark {
   --tooltip-bg: #2d3748;
+  --tooltip-progress-bg: #4a5568;
+  --tooltip-progress-fill: #5c6677;
   --tooltip-color: #f7fafc;
   --tooltip-border: 1px solid #4a5568;
   --tooltip-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
@@ -162,6 +181,8 @@
 .hintorium-tooltip.glass {
   --tooltip-bg: rgba(255, 255, 255, 0.2);
   --tooltip-color: #111;
+  --tooltip-progress-bg: #edf2f7;
+  --tooltip-progress-fill: #d5dade;
   --tooltip-border: 1px solid rgba(255, 255, 255, 0.3);
   --tooltip-shadow: 0 8px 32px rgba(31, 38, 135, 0.37);
   --tooltip-text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -176,7 +197,6 @@
   --tour-btn-disabled-bg: rgba(255, 255, 255, 0.2);
   --tour-btn-disabled-color: rgba(15, 12, 12, 0.73);
 
-  /* Done button */
   --tour-btn-done-bg: #d63031;
   --tour-btn-done-color: #ffffff;
   --tour-btn-done-border: 1px solid #b02628;
@@ -196,6 +216,8 @@
 .hintorium-tooltip.pastel {
   --tooltip-bg: linear-gradient(135deg, #ff9a9e 0%, #fad0c4 100%);
   --tooltip-color: #333;
+  --tooltip-progress-bg: rgba(255, 255, 255, 0.3);
+  --tooltip-progress-fill: rgba(255, 255, 255, 0.6);
   --tooltip-border: none;
   --tooltip-shadow: 0 4px 20px rgba(102, 126, 234, 0.4);
   --hint-tooltip-loading-color: rgba(51, 51, 51, 0.75);
@@ -209,7 +231,6 @@
   --tour-btn-disabled-bg: rgba(255, 255, 255, 0.4);
   --tour-btn-disabled-color: rgba(15, 12, 12, 0.73);
 
-  /* Done button */
   --tour-btn-done-bg: #a83279;
   --tour-btn-done-color: #ffffff;
   --tour-btn-done-border: 1px solid #8b2865;
@@ -229,6 +250,8 @@
   --tooltip-text-shadow: 0 0 5px #00ff88;
   --hint-tooltip-loading-color: #00ff88;
   --hint-tooltip-error-color: #ff0055;
+  --tooltip-progress-bg: rgba(0, 255, 136, 0.1);
+  --tooltip-progress-fill: #00ff88;
 
   --tour-btn-bg: rgba(0, 255, 136, 0.1);
   --tour-btn-color: #00ff88;
@@ -267,8 +290,6 @@
   --tooltip-text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
   --hint-tooltip-loading-color: #ffffff;
   --hint-tooltip-error-color: #ffcc00;
-
-  /* Tour buttons */
   --tour-btn-bg: rgba(255, 255, 255, 0.2);
   --tour-btn-color: #ffffff;
   --tour-btn-border: 1px solid rgba(255, 255, 255, 0.5);
@@ -276,6 +297,9 @@
   --tour-btn-hover-color: #ffffff;
   --tour-btn-disabled-bg: rgba(255, 255, 255, 0.1);
   --tour-btn-disabled-color: rgba(255, 255, 255, 0.4);
+
+  --tooltip-progress-bg: rgba(255, 255, 255, 0.2);
+  --tooltip-progress-fill: rgba(255, 255, 255, 0.7);
 
   --tour-btn-done-bg: #d63031;
   --tour-btn-done-color: #ffffff;
@@ -534,6 +558,27 @@
 .hintorium-tour-done:focus {
   background-color: var(--tour-btn-hover-bg);
   color: var(--tour-btn-hover-color);
+}
+
+.hintorium-tour-progress-bar-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+
+  height: 4px;
+  background-color: var(--tooltip-progress-bg);
+  border-radius: 2px 2px 0 0;
+  overflow: hidden;
+  z-index: 999;
+}
+
+.hintorium-tour-progress-bar-fill {
+  border-radius: 9999px;
+  width: 0%;
+  height: 100%;
+  background-color: var(--tooltip-progress-fill);
+  transition: width 0.2s linear;
 }
 
 /* ======= HELPERS ======= */
