--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -1,4 +1,241 @@
-body {
-  background-color: black;
-  color: #fff;
+/* geist-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/geist-v4-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-500 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist";
+  font-style: normal;
+  font-weight: 500;
+  src: url("../fonts/geist-v4-latin-500.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-600 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist";
+  font-style: normal;
+  font-weight: 600;
+  src: url("../fonts/geist-v4-latin-600.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* geist-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Geist";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/geist-v4-latin-700.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+:root {
+  --bg-background: 248, 248, 248;
+  --color-border: 229, 229, 229;
+  --color-ring: 161, 161, 161;
+  --color-foreground: 115, 115, 115;
+  --color-primary-foreground: 10, 10, 10;
+
+  --ff-primary: "Geist", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  font-family: var(--ff-primary);
+}
+
+.container {
+  min-height: 200vh;
+  background-color: rgb(var(--bg-background));
+}
+
+/* --- HEADER --- */
+
+.header {
+  position: sticky;
+  z-index: 10;
+  top: 0;
+  border-bottom: 1px solid rgba(var(--color-border), 0.4);
+  background-color: rgba(var(--bg-background), 0.7);
+  backdrop-filter: blur(8px);
+
+  & .header__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 4rem;
+  }
+
+  & .header__actions {
+    display: flex;
+    align-items: center;
+    gap: 0.25rem;
+  }
+}
+
+/* --- NAVIGATION --- */
+
+.nav {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.nav__list {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+  list-style-type: none;
+}
+
+.mobile-nav {
+  display: none;
+}
+
+/* --- REUSEABLE --- */
+
+.wrapper {
+  --width: 80rem;
+  max-width: var(--width);
+  margin: 0 auto;
+
+  padding: 0 2rem;
+}
+
+.logo {
+  width: 2rem;
+  height: 2rem;
+}
+
+.link {
+  &:link,
+  &:visited {
+    display: inline-block;
+    text-decoration: none;
+  }
+}
+
+.link--navigation {
+  &:link,
+  &:visited {
+    font-size: 0.875rem;
+    color: rgb(var(--color-foreground));
+
+    transition: 0.3s;
+  }
+
+  &:hover {
+    color: rgb(var(--color-primary-foreground));
+  }
+}
+
+.button {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+  white-space: nowrap;
+  border-radius: 0.375rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+  transition: 0.2s;
+  cursor: pointer;
+  font-family: inherit;
+  border: none;
+  outline: none;
+  background-color: transparent;
+}
+
+.button:disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.button:focus-visible {
+  border: 1px solid rgb(var(--color-ring));
+  box-shadow: 0 0 0 3px
+    color-mix(in srgb, rgb(var(--color-ring)) 50%, transparent);
+}
+
+.button svg {
+  pointer-events: none;
+}
+
+.button--navigation {
+  width: 2.25rem;
+  height: 2.25rem;
+}
+
+.button--hamburger {
+  display: none;
+}
+
+/* --- MEDIA --- */
+
+@media (max-width: 64rem) {
+  .wrapper {
+    padding: 0 1.5rem;
+  }
+}
+
+@media (max-width: 40rem) {
+  .wrapper {
+    padding: 0 1rem;
+  }
+
+  .nav {
+    display: none;
+  }
+
+  .button--hamburger {
+    display: inline-flex;
+  }
+
+  .mobile-nav {
+    display: flex;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 4rem;
+    min-height: calc(100vh - 4rem);
+    padding: 2rem 1rem;
+    backdrop-filter: blur(8px);
+    background-color: rgb(var(--bg-background));
+    z-index: 20;
+
+    & .nav__list {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
+
+    & .nav__subtitle {
+      font-size: 0.875rem;
+      color: rgb(var(--color-foreground));
+    }
+  }
+
+  .link--navigation {
+    &:link,
+    &:visited {
+      --local-color: rgb(10, 10, 10);
+
+      font-weight: 500;
+      font-size: 1.5rem;
+      color: var(--local-color);
+    }
+  }
 }
