--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -205,7 +205,7 @@ html {
   }
 
   .mobile-nav {
-    display: flex;
+    display: hidden;
     position: fixed;
     left: 0;
     right: 0;
@@ -226,6 +226,10 @@ html {
       font-size: 0.875rem;
       color: rgb(var(--color-foreground));
     }
+  }
+
+  .mobile-nav.open {
+    display: flex;
   }
 
   .link--navigation {
