--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -43,6 +43,7 @@
   --color-primary-foreground: 250, 250, 250;
   --color-secondary: 245, 245, 245;
   --color-primary: 112, 52, 213;
+  --color-card: 255, 255, 255;
 
   /* SPACING SYSTEM */
 
@@ -53,6 +54,7 @@
   --gap-2: 0.25rem;
   --gap-3: 0.5rem;
   --gap-4: 1rem;
+  --gap-6: 1.5rem;
   --gap-8: 2rem;
 
   --py-2: 0.5rem;
@@ -65,9 +67,11 @@
   --px-4: 1rem;
   --px-3: 0.75rem;
   --px-8: 2rem;
+  --p-5: 1.5rem;
 
   --mb-4: 1rem;
   --mb-5: 1.5rem;
+  --mb-16: 4rem;
   --mb-6: 2rem;
   --mt-12: 3rem;
 
@@ -75,7 +79,9 @@
 
   --text-6xl: 3.75rem;
   --text-4xl: 2.25rem;
-  --text-2xl: 1.875rem;
+  --text-3xl: 1.875rem;
+  --text-2xl: 1.5rem;
+  --text-xl: 1.25rem;
   --text-lg: 1.125rem;
   --text-sm: 0.875rem;
   --text-xs: 0.75rem;
@@ -250,6 +256,92 @@ html {
   font-weight: 500;
 }
 
+/* --- OVERVIEW --- */
+
+.overview {
+  padding: var(--py-20) var(--px-4);
+
+  & .overview__wrapper {
+    max-width: 64rem;
+    margin: 0 auto;
+  }
+
+  & .overview__content {
+    text-align: center;
+    margin-bottom: var(--mb-16);
+  }
+
+  & .overview__title {
+    font-size: var(--text-4xl);
+    font-weight: 700;
+    margin-bottom: var(--mb-4);
+  }
+
+  & .overview__description {
+    color: rgb(var(--color-muted-foreground));
+  }
+
+  & .overview__items {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    list-style-type: none;
+    gap: var(--gap-6);
+  }
+
+  & .overview__item {
+    transition: 0.3s;
+    border: 1px solid rgb(var(--color-border), 0.5);
+    background-color: var(--color-card);
+    color: rgb(var(--color-foreground));
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-6);
+    padding: var(--p-5);
+    border-radius: 11px;
+
+    &:hover {
+      border: 1px solid rgb(var(--color-border), 0.8);
+    }
+  }
+
+  & .overview__subtitle {
+    font-weight: 600;
+    font-size: var(--text-xl);
+  }
+
+  & .overview__subdescription {
+    color: rgb(var(--color-muted-foreground));
+  }
+
+  & .overview__image {
+    margin-bottom: var(--mb-4);
+  }
+}
+
+/* --- EXAMPLE --- */
+
+.example {
+  & .example__title {
+    font-weight: 600;
+    font-size: var(--text-lg);
+  }
+
+  & .example__content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: var(--py-12) 0;
+  }
+
+  & .example__code {
+    padding: 0.75rem;
+    background-color: rgb(var(--color-secondary));
+    border-radius: inherit;
+    font-size: var(--text-sm);
+    overflow-x: auto;
+  }
+}
+
 /* --- REUSEABLE --- */
 
 .wrapper {
@@ -410,6 +502,14 @@ html {
 
     & .hero__actions {
       flex-direction: column;
+    }
+  }
+
+  .overview {
+    padding: var(--py-12) var(--px-4);
+
+    & .overview__items {
+      grid-template-columns: 1fr;
     }
   }
 
