feat: interactive examples docs

--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -58,8 +58,10 @@
   --gap-8: 2rem;
 
   --py-2: 0.5rem;
+  --py-4: 1rem;
   --py-8: 2rem;
   --py-12: 3rem;
+  --py-16: 4rem;
   --py-20: 5rem;
   --py-32: 8rem;
   --py-1: 0.25rem;
@@ -299,6 +301,8 @@ html {
     padding: var(--p-5);
     border-radius: 11px;
 
+    justify-content: flex-start;
+
     &:hover {
       border: 1px solid rgb(var(--color-border), 0.8);
     }
@@ -321,6 +325,7 @@ html {
 /* --- EXAMPLE --- */
 
 .example {
+  width: 100%;
   & .example__title {
     font-weight: 600;
     font-size: var(--text-lg);
@@ -330,7 +335,10 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
+    gap: var(--gap-8);
     padding: var(--py-12) 0;
+    min-height: var(--h-10);
   }
 
   & .example__code {
@@ -339,6 +347,33 @@ html {
     border-radius: inherit;
     font-size: var(--text-sm);
     overflow-x: auto;
+
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-4);
+
+    & .example__code-content {
+      display: flex;
+      flex-direction: column;
+      gap: var(--gap-2);
+    }
+
+    & .example__code-item {
+      display: flex;
+      flex-direction: column;
+      gap: var(--gap-4);
+
+      &:not(:last-child) {
+        padding-bottom: var(--py-4);
+        border-bottom: 1px solid rgb(var(--color-border));
+      }
+    }
+
+    & .example__code-subtitle {
+      text-transform: uppercase;
+      color: rgb(var(--color-primary));
+      font-weight: 600;
+    }
   }
 }
 
@@ -423,6 +458,8 @@ html {
   color: rgb(var(--color-primary-foreground));
   outline: none;
 
+  z-index: 11;
+
   &:hover {
     background-color: rgba(var(--color-primary), 0.9);
   }
@@ -437,7 +474,7 @@ html {
 
 .button--outline {
   border: 1px solid rgb(var(--color-border));
-  background-color: rgb(var(--bg-background));
+  background-color: rgb(var(--background));
   color: rgb(var(--color-text-foreground));
 
   &:focus-visible {
@@ -494,7 +531,7 @@ html {
   }
 
   .hero {
-    padding: var(--py-20) var(--px-4);
+    padding: var(--py-16) var(--px-4) var(--py-8);
 
     & .hero__title {
       font-size: var(--text-4xl);
