--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -44,6 +44,7 @@
   --color-secondary: 245, 245, 245;
   --color-primary: 112, 52, 213;
   --color-card: 255, 255, 255;
+  --color-black: 0, 0, 0;
 
   /* SPACING SYSTEM */
 
@@ -69,9 +70,13 @@
   --px-5: 1.5rem;
   --px-4: 1rem;
   --px-3: 0.75rem;
+  --px-2: 0.5rem;
   --px-8: 2rem;
   --p-5: 1.5rem;
+  --p-8: 2rem;
+  --p-10: 2.5rem;
 
+  --mb-3: 0.75rem;
   --mb-4: 1rem;
   --mb-5: 1.5rem;
   --mb-16: 4rem;
@@ -262,7 +267,7 @@ html {
 /* --- OVERVIEW --- */
 
 .overview {
-  padding: var(--py-20) var(--px-4);
+  padding: var(--py-12) var(--px-4);
 
   & .overview__wrapper {
     max-width: 64rem;
@@ -384,7 +389,143 @@ html {
   }
 }
 
+/* --- REVIEWS --- */
+
+.review {
+  border: 1px solid rgb(var(--color-border), 0.5);
+  border-radius: 11px;
+  background-color: rgb(var(--color-card));
+  padding: var(--p-10);
+  backdrop-filter: blur(8px);
+
+  & .review__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: var(--gap-8);
+    align-items: center;
+  }
+
+  & .review__image-container {
+    position: relative;
+    height: 100%;
+    border-radius: 11px;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(var(--color-black), 0.15);
+    }
+
+    &:hover .review__image {
+      transform: scale(1.03);
+    }
+  }
+
+  & .review__general {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: var(--gap-3);
+    height: 100%;
+  }
+
+  & .review__tags {
+    display: flex;
+    gap: var(--gap-2);
+  }
+
+  & .review__stars {
+    margin-bottom: var(--mb-3);
+  }
+
+  & .review__author {
+    margin-top: auto;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-2);
+
+    & .review__author-name {
+      font-weight: 600;
+      font-size: var(--text-lg);
+      color: rgb(var(--color-foreground));
+    }
+
+    & .review__author-job {
+      font-size: var(--text-sm);
+      color: rgb(var(--color-muted-foreground));
+    }
+  }
+
+  & .review__text {
+    font-size: var(--text-lg);
+    color: rgb(var(--color-foreground));
+    line-height: 1.6;
+    margin-bottom: var(--mb-3);
+  }
+
+  & .review__list {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-4);
+    margin-bottom: var(--mb-3);
+  }
+
+  & .review__list-text {
+    font-size: var(--text-sm);
+    color: rgb(var(--color-foreground));
+  }
+
+  & .review__best {
+    display: flex;
+    flex-direction: column;
+    gap: var(--gap-3);
+    list-style-type: none;
+
+    & .review__best-item {
+      display: flex;
+      align-items: center;
+      gap: var(--gap-3);
+      font-size: var(--text-sm);
+      color: rgb(var(--color-primary));
+    }
+
+    & .review__best-marker {
+      color: rgb(var(--color-primary));
+    }
+  }
+
+  & .review__image {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
+
+    transition: 0.6s;
+  }
+}
+
 /* --- REUSEABLE --- */
+
+.tag {
+  display: flex;
+  align-items: center;
+  gap: var(--gap-2);
+  padding: var(--py-1) var(--px-2);
+  border-radius: 9px;
+  font-size: var(--text-xs);
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.tag--verified {
+  background-color: rgb(var(--color-primary));
+  color: rgb(var(--color-primary-foreground));
+}
 
 .wrapper {
   --width: 80rem;
@@ -520,6 +661,12 @@ html {
   display: none;
 }
 
+/* --- SWIPER --- */
+
+.swiper-pagination {
+  --swiper-pagination-bottom: -25px;
+}
+
 /* --- MEDIA --- */
 
 @media (max-width: 64rem) {
@@ -550,7 +697,7 @@ html {
   }
 
   .overview {
-    padding: var(--py-12) var(--px-4);
+    padding: var(--py-8) var(--px-4);
 
     & .overview__items {
       grid-template-columns: 1fr;
