--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -1,3 +1,5 @@
+@import "swiper/css";
+
 /* geist-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -666,6 +668,18 @@ html {
 
 .button--hamburger {
   display: none;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
 
 /* --- SWIPER --- */
