fix(mobile): fix mobile nav, router

--- a/apps/docs/src/style.css
+++ b/apps/docs/src/style.css
@@ -647,6 +647,13 @@ html {
   }
 }
 
+.link--active {
+  &:link,
+  &:visited {
+    color: rgb(var(--color-foreground));
+  }
+}
+
 .link--footer {
   &:link,
   &:visited {
